diesel_compile_tests/tests/fail/boxed_queries_require_selectable_expression_for_order.stderr
error[E0277]: the trait bound `FromClause<users::table>: AppearsInFromClause<posts::table>` is not satisfied
  --> tests/fail/boxed_queries_require_selectable_expression_for_order.rs:21:37
   |
21 |     users::table.into_boxed::<Pg>().order(posts::title.desc());
   |                                     ^^^^^ the trait `AppearsInFromClause<posts::table>` is not implemented for `FromClause<users::table>`
   |
   = help: the trait `AppearsInFromClause<QS1>` is implemented for `FromClause<QS2>`
note: required because of the requirements on the impl of `AppearsOnTable<FromClause<users::table>>` for `posts::columns::title`
  --> tests/fail/boxed_queries_require_selectable_expression_for_order.rs:16:9
   |
16 |         title -> VarChar,
   |         ^^^^^
   = note: 1 redundant requirement hidden
   = note: required because of the requirements on the impl of `AppearsOnTable<FromClause<users::table>>` for `diesel::expression::operators::Desc<posts::columns::title>`
   = note: required because of the requirements on the impl of `OrderDsl<diesel::expression::operators::Desc<posts::columns::title>>` for `BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), FromClause<users::table>, Pg>`
